[gd_scene load_steps=8 format=3 uid="uid://dcmx5j0nynrpq"]

[ext_resource type="Script" uid="uid://cia3o5hq6eh7l" path="res://view/register/register.gd" id="1_kfcug"]
[ext_resource type="Shader" path="res://assets/background_effect.gdshader" id="3_64uqn"]
[ext_resource type="Texture2D" uid="uid://dyo2iothubrem" path="res://assets/background.svg" id="4_nt46l"]
[ext_resource type="PackedScene" uid="uid://cpmsnc8fuugqe" path="res://component/logger/logger.tscn" id="5_o2ql1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vqait"]
shader = ExtResource("3_64uqn")
shader_parameter/amplitutde = Vector2(1, 0)
shader_parameter/speed = Vector2(1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_yei6d"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_g1chx"]
font_size = 40

[node name="Register" type="Node2D"]
script = ExtResource("1_kfcug")

[node name="ParallaxBackground" type="Parallax2D" parent="."]
repeat_size = Vector2(12000, 12000)
repeat_times = 2

[node name="Background" type="Sprite2D" parent="ParallaxBackground"]
texture_repeat = 2
material = SubResource("ShaderMaterial_vqait")
texture = ExtResource("4_nt46l")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 12000, 12000)

[node name="Gui" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Gui"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -33.0
offset_right = 33.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Gui/VBoxContainer"]
layout_mode = 2
text = "Agarust"
label_settings = SubResource("LabelSettings_yei6d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UsernameEdit" type="LineEdit" parent="Gui/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Username"
max_length = 16
clear_button_enabled = true
select_all_on_focus = true

[node name="PasswordEdit" type="LineEdit" parent="Gui/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
max_length = 64
clear_button_enabled = true
select_all_on_focus = true
secret = true

[node name="PasswordEdit2" type="LineEdit" parent="Gui/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Confirm password"
max_length = 64
clear_button_enabled = true
select_all_on_focus = true
secret = true

[node name="ColorPicker" type="ColorPicker" parent="Gui/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
color = Color(0.0392157, 0.156863, 0.835294, 1)
edit_alpha = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="Gui/VBoxContainer"]
layout_mode = 2

[node name="RegisterButton" type="Button" parent="Gui/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Register"

[node name="BackButton" type="Button" parent="Gui/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Back"

[node name="Logger" parent="Gui" instance=ExtResource("5_o2ql1")]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -256.0
offset_top = -296.0
offset_right = 256.0
offset_bottom = -16.0
grow_vertical = 0

[node name="ConnectionIdLabel" type="Label" parent="Gui"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -40.0
offset_right = 162.0
offset_bottom = -17.0
grow_vertical = 0
text = "Connection ID: ABC"

[node name="MessagePanel" type="Panel" parent="Gui"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="Label" parent="Gui/MessagePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Message Label"
label_settings = SubResource("LabelSettings_g1chx")
horizontal_alignment = 1
vertical_alignment = 1
